--- a/Project-01/Project-01.html
+++ b/Project-01/Project-01.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 
-    <title>100-web-project</title>
+    <title>Project-01</title>
 
 </head>
 <body>
@@ -23,4 +23,5 @@
         </ul>
         
 </body>
+
 </html>
